# benslack19.github.io

./: .gitignore  Gemfile.lock-backup  Jupiter-to-MD.ipynb  README-for-posts.md  README.md  _config.yml  git_record.txt  index.html  index.md  pyproject.toml
.ipynb_checkpoints/: Jupiter-to-MD-checkpoint.ipynb
_data/: navigation.yml
_includes/: scripts.html  scripts_pre200509.html
_layouts/: single.html
_mynotes/: Bens_Python_Jupyter_Cookbook.html  Bens_Python_Jupyter_Cookbook.ipynb  Bens_Python_Jupyter_Cookbook.md  Data_Visualization.ipynb  Installing pip packages for Jupyter.ipynb  Pandas_navigation_and_munging.ipynb  Pandas_navigation_and_munging.md  Python_Scatterplot_by Ben.md  Python_Scatterplot_by_Ben.ipynb  Python_Scatterplot_by_Ben.md  Python_Scatterplot_by_Ben_mdtest.md  Python_and_Jupyter_Setup.ipynb  Python_and_Jupyter_Setup.md  Python_and_Pandas.ipynb  Python_and_Pandas.md  Statistics_and_MachineLearning.ipynb  Using_os.md  custom_scatterplot_function_in_python.ipynb  custom_scatterplot_function_in_python.md  nospaces.md
_mynotes_draft/: Data_Visualization.ipynb  Databases.ipynb  python_algorithms.ipynb
_pages/: 2020-05-29-responses-to-splice-project.md  MRsplash-page.md  about-the-cover.md  about.md  ds-courses.md  home.md  interesting-resources.md  mynotes.html  projects-archive.html  projects-archive_alt.md  rename_notebook_test.html  rename_notebook_test.ipynb  splash-page-MRoriginal.md  (+3 more)
_pages-bak/: about-the-cover.md  hometest.md  projects-archive.html  testimages.md  testsplash.md
_pages-bak-test/: about.md  projects-archive.html
(+204 files in other folders)
