[project]
name = "benslack19-blog"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
    "pymc",
    "arviz",
    "torch",
    "graphviz",
    "jupyter",
    "nbconvert",
    "watermark",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
